# doc-to-md

./: .gitignore  LICENSE  PLAN.md  README.md  README.zh.md
backend/: main.py  pyproject.toml
backend/api/: models.py  routes.py
backend/converter/: content_cleaner.py  html_to_md.py
backend/crawler/: engine.py  link_extractor.py  page_fetcher.py  url_filter.py
backend/merger/: doc_merger.py  zip_builder.py
backend/task/: manager.py  progress.py
backend/tests/: test_api_routes.py  test_content_cleaner.py  test_doc_merger.py  test_engine.py  test_html_to_md.py  test_link_extractor.py  test_page_fetcher.py  test_task_manager.py  test_token_estimator.py  test_url_filter.py  test_zip_builder.py
backend/utils/: token_estimator.py
frontend/: .env.local.example  jest.config.ts  package-lock.json  package.json
frontend/__tests__/: test-utils.tsx
frontend/__tests__/app/: page.test.tsx
frontend/__tests__/components/: crawl-progress.test.tsx  download-button.test.tsx  download-section.test.tsx  error-display.test.tsx  task-history.test.tsx  url-input-form.test.tsx
frontend/__tests__/hooks/: use-crawl-task.test.ts  (+1 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: client-shell.tsx  crawl-progress.tsx  download-button.tsx  download-section.tsx  error-display.tsx  task-history.tsx  url-input-form.tsx
frontend/hooks/: use-crawl-task.ts  use-sse-progress.ts
frontend/i18n/: detect-locale.ts  index.ts  locale-context.tsx  types.ts
frontend/lib/: api-client.ts  constants.ts  format-utils.ts  url-utils.ts
frontend/types/: index.ts
(+6 files in other folders)
